force-app/main/default/objects/vlocity_cmt__ProductChildItem__c/vlocity_cmt__ProductChildItem__c.object-meta.xml
<CustomObject>
    <description>Product Child Items define the component products associated with a grouped package of products or services. Sometimes products are grouped to accommodate specialized pricing. The child items are automatically added to the cart when the parent product is added, so child items are always created when products are sold together. May represent the make up of product offerings, product specifications, resources specifications or service specifications.</description>
    <label>Product Child Item</label>
    <nameField>
        <label>Product Child Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Child Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>