force-app/main/default/objects/vlocity_cmt__ProductChildItem__c/fields/vlocity_cmt__ChildLineNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ChildLineNumber__c</fullName>
    <label>Sequence</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>