force-app/main/default/objects/vlocity_cmt__ProductChildItem__c/fields/vlocity_cmt__ChildProductId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ChildProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Child Items (Child)</relationshipLabel>
    <relationshipName>ProductChildItemsChild</relationshipName>
    <type>Lookup</type>
</CustomField>