force-app/main/default/objects/vlocity_cmt__ProductChildItem__c/fields/vlocity_cmt__ChildProductName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ChildProductName__c</fullName>
    <formula>vlocity_cmt__ChildProductId__r.Name</formula>
    <label>Child Product Name</label>
    <type>Text</type>
</CustomField>