force-app/main/default/objects/vlocity_cmt__ProductChildItem__c/fields/vlocity_cmt__CollapseHierarchy__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CollapseHierarchy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to identify if the child products below this level should be collapsed or expanded.</description>
    <label>Collapse Hierarchy</label>
    <type>Checkbox</type>
</CustomField>