force-app/main/default/objects/vlocity_cmt__ProductChildItem__c/fields/vlocity_cmt__MaxQuantity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MaxQuantity__c</fullName>
    <defaultValue>99999</defaultValue>
    <description>Maximum quantity for this product in the line item</description>
    <label>Max Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>