force-app/main/default/objects/vlocity_cmt__ProductChildItem__c/fields/vlocity_cmt__MinMaxDefaultQty__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MinMaxDefaultQty__c</fullName>
    <formula>TEXT(vlocity_cmt__MinQuantity__c) &amp; &quot;, &quot; &amp; TEXT(vlocity_cmt__MaxQuantity__c) &amp; &quot;, &quot; &amp; TEXT(vlocity_cmt__Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min, Max, Default</label>
    <type>Text</type>
</CustomField>