force-app/main/default/objects/vlocity_cmt__ProductChildItem__c/fields/vlocity_cmt__MinQuantity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MinQuantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Minimum quantity for this product in the line item.</description>
    <label>Min Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>