force-app/main/default/objects/vlocity_cmt__ProductChildItem__c/fields/vlocity_cmt__ParentProductName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ParentProductName__c</fullName>
    <formula>vlocity_cmt__ParentProductId__r.Name</formula>
    <label>Parent Product Name</label>
    <type>Text</type>
</CustomField>