force-app/main/default/objects/vlocity_cmt__ProductChildItem__c/fields/vlocity_cmt__SeqNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__SeqNumber__c</fullName>
    <formula>VALUE(vlocity_cmt__ChildLineNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SeqNumber</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>