force-app/main/default/objects/vlocity_cmt__ProductChildItem__c/validationRules/vlocity_cmt__ChildProductNonAssetizeRule.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_cmt__ChildProductNonAssetizeRule</fullName>
    <active>true</active>
    <description>Non Assetizable Product can only have Non Assetizable children</description>
    <errorConditionFormula>(vlocity_cmt__ParentProductId__r.vlocity_cmt__IsNotAssetizable__c &amp;&amp;  !vlocity_cmt__ChildProductId__r.vlocity_cmt__IsNotAssetizable__c )</errorConditionFormula>
    <errorMessage>Cannot add Assetizable Child Product to a Non Assetizable Parent Product</errorMessage>
</ValidationRule>