force-app/main/default/objects/vlocity_cmt__ProductChildItem__c/validationRules/vlocity_cmt__Min_child_greater_than_Max_child_item.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_cmt__Min_child_greater_than_Max_child_item</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_cmt__MinimumChildItemQuantity__c &gt;  vlocity_cmt__MaximumChildItemQuantity__c</errorConditionFormula>
    <errorMessage>Min Children Quantity must be less than or equal to Max Children Quantity</errorMessage>
</ValidationRule>