force-app/main/default/objects/vlocity_cmt__ProductChildItem__c/validationRules/vlocity_cmt__Min_greater_than_Max.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_cmt__Min_greater_than_Max</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_cmt__MinQuantity__c  &gt;  vlocity_cmt__MaxQuantity__c</errorConditionFormula>
    <errorDisplayField>vlocity_cmt__MinQuantity__c</errorDisplayField>
    <errorMessage>Min Quantity must be less than or equal to Max Quantity</errorMessage>
</ValidationRule>