force-app/main/default/objects/vlocity_cmt__ProductChildItem__c/validationRules/vlocity_cmt__ParentProduct_cannot_be_ChildProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_cmt__ParentProduct_cannot_be_ChildProduct</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_cmt__ParentProductId__c == vlocity_cmt__ChildProductId__c</errorConditionFormula>
    <errorDisplayField>vlocity_cmt__ChildProductId__c</errorDisplayField>
    <errorMessage>Parent Product cannot be added as Child Product</errorMessage>
</ValidationRule>